--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,6 +82,38 @@ a {
   transform-origin: center;
 }
 
+.not-found {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  min-height: 50vh;
+  padding: 2rem;
+}
+
+.not-found h1 {
+  font-size: 4rem;
+  font-weight: 800;
+  margin-bottom: 0.5rem;
+}
+
+.not-found p {
+  font-size: 1.25rem;
+  margin-bottom: 1.5rem;
+}
+
+.not-found-link {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #fff;
+  text-decoration: underline;
+}
+
+.not-found-link:hover {
+  text-decoration: none;
+}
+
 .searchbar {
   display: flex;
   align-items: center;
